- FIXED: Couple small loading bugs I missed.