@@ -1,5 +1,5 @@
 [versions]
-    modopedia = "1.0.2"
+    modopedia = "1.0.3"
 
 # Common
     minecraft = "1.21.1"
